--- a/app/src/main/res/layout/activity_chat_message.xml
+++ b/app/src/main/res/layout/activity_chat_message.xml
@@ -46,8 +46,9 @@
         android:dividerHeight="16dp"
         android:layout_marginBottom = "16dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
 
+    </ListView>
 
 
 </RelativeLayout>
