--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.s.chat.ListUsersActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView"
         android:layout_width="527dp"
         android:layout_height="755dp"
         android:layout_alignParentStart="true"
