--- a/app/src/main/res/layout/list_recv_message.xml
+++ b/app/src/main/res/layout/list_recv_message.xml
@@ -10,6 +10,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="cursive" />
+
+        <TextView
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/message_time"
             android:id="@+id/message_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
