--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#cb6657</color>
+    <color name="colorAccent">#b66760</color>
+    <color name="redd">#b66760</color>
+    <color name="bluee">#87d7f2</color>
 </resources>
